--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postcss": "^8.4.35",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
-    "svelte-motion": "^0.12.1",
+    "svelte-motion": "^0.12.2",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
@@ -26,8 +26,15 @@
   },
   "type": "module",
   "dependencies": {
+    "bits-ui": "^0.18.4",
+    "clsx": "^2.1.0",
     "gsap": "^3.12.5",
     "locomotive-scroll": "beta",
-    "motion": "^10.17.0"
+    "lucide-svelte": "^0.343.0",
+    "motion": "^10.17.0",
+    "pocketbase": "^0.21.1",
+    "sveltepocket": "^0.1.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwind-variants": "^0.2.0"
   }
 }
